terminado para ambiente cloud

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=bff_web_bancoxyz
 server.port=9443
+# Enable Config server desde contenedor docker 
+spring.config.import=optional:configserver:http://config-server:8888
+# Enable Https
 server.ssl.enabled=true
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=password
